--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
 
+    <!-- font awesome icons-->
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+
     <!--Hojas de estilos-->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/estilo.css" />
@@ -13,6 +21,9 @@
     <!--Fuentes-->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap");
+    </style>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Tenali+Ramakrishna&display=swap");
     </style>
     <!--Archivo js-->
     <script src="js/js.js"></script>
@@ -28,7 +39,9 @@
         <a href=""><li>Portafolio</li></a>
       </ul>
     </nav>
-    <div id="menu-toggle" onclick="boton()">button</div>
+    <div id="menu-toggle" onclick="boton()">
+      <i class="fas fa-bars"></i>
+    </div>
 
     <!-- Inicio -->
 
@@ -41,6 +54,8 @@
         <button>Quien soy</button>
         <button>Que hago</button>
         <button>Portafolio</button>
+      </div>
+      <div class="boton-contacto">
         <button id="contacto">Contacto</button>
       </div>
     </section>
