--- a/index.html
+++ b/index.html
@@ -50,14 +50,20 @@
         Hola, me llamo Vicente Figueroa <br />
         ¿En que puedo ayudarte ?
       </h1>
-      <div id="botones_inicio">
-        <button>Quien soy</button>
-        <button>Que hago</button>
-        <button>Portafolio</button>
+     
+      <div class="contenedor">
+        <div class="botonera">
+          <button>Quien soy</button>
+          <button>Especialidad</button>
+          <button>Portafolio</button>
+        </div>
+        <div class="contacto">
+          <button>
+            contacto
+          </button>
+        </div>
       </div>
-      <div class="boton-contacto">
-        <button id="contacto">Contacto</button>
-      </div>
+     
     </section>
 
     <section id="presentacion">
