--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav id="menu">
       <ul>
         <a href=""><li>Inicio</li></a>
-        <a href=""><li>Quien soy</li></a>
+        <a href="#presentacion"><li>Quien soy</li></a>
         <a href=""><li>Especialidad</li></a>
         <a href=""><li>Contacto</li></a>
         <a href=""><li>Portafolio</li></a>
@@ -54,7 +54,7 @@
       <div class="contenedor">
         <div class="botonera">
           <button>Quien soy</button>
-          <button>Especialidad</button>
+          <button>Skills</button>
           <button>Portafolio</button>
         </div>
         <div class="contacto">
@@ -67,12 +67,21 @@
     </section>
 
     <section id="presentacion">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi optio illo
-        a enim consequuntur cum explicabo eum consectetur similique!
-        Consequuntur ratione quod alias vel nostrum magni, incidunt ab eius
-        quaerat.
-      </p>
+     <h2>
+       Soy un desarrollador web y estudiante universitario fanatico de la programación.
+     </h2>
+     <p>
+       En mis tiempos libres me gusta estudiar y ampliar mi conocimiento sobre la programacion y diferentes ambitos.
+     </p>
+
+     <img src="" alt="Foto de perfil">
+
+     <button>
+       contacto
+     </button>
+
+     <button>Skills</button>
+     <button>Portafolio</button>
     </section>
 
     <section>
