--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Tenali+Ramakrishna&display=swap");
     </style>
+
+    <!--jquery-->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+
     <!--Archivo js-->
     <script src="js/js.js"></script>
   </head>
@@ -41,6 +49,10 @@
     </nav>
     <div id="menu-toggle" onclick="boton()">
       <i class="fas fa-bars"></i>
+    </div>
+
+    <div class="inicio-boton">
+      <i class="fas fa-chevron-up"></i>
     </div>
 
     <!-- Inicio -->
