--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href=""><button>Portafolio</button></a>
         </div>
         <div class="contacto">
-          <a href=""><button>contacto</button></a>
+          <a href="#contacto"><button>contacto</button></a>
         </div>
       </div>
     </section>
@@ -84,33 +84,43 @@
         </h2>
         <p>
           En mis tiempos libres me gusta estudiar y ampliar mi conocimiento
-          sobre la programacion y diferentes ambitos.
+          sobre la programacion y el desarrollo de software.
         </p>
       </div>
 
       <img src="img/perfil.jpg" alt="Foto de perfil" />
 
       <div class="contenedor">
+        <div class="contacto">
+          <a href="#contacto"><button>contacto</button></a>
+        </div>
         <div class="botonera">
           <a href=""><button>Skills</button></a>
           <a href=""><button>Portafolio</button></a>
         </div>
-        <div class="contacto">
-          <a href=""><button>contacto</button></a>
-        </div>
+        
       </div>
     </section>
 
-    <section>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-        aspernatur corrupti tempore earum impedit voluptatum officiis non ab
-        aliquam dicta, nostrum sunt tempora enim quaerat eos? Ratione minima
-        suscipit eveniet. Lorem ipsum dolor sit, amet consectetur adipisicing
-        elit. Quia fuga, earum voluptate deleniti corporis nisi ea molestiae
-        reiciendis, obcaecati numquam, quisquam facilis asperiores ipsum eveniet
-        quidem officia aspernatur. Iure, qui!
-      </p>
+    <section id="contacto">
+      <div class="contenido">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eius, quos aperiam animi voluptatum obcaecati sed porro</p>
+
+        <div class="botonera">
+          <button>
+          Interes laboral
+        </button>
+
+        <button>
+          C.V
+        </button>
+        </div>
+        
+
+        <button class="portafolio">
+          portafolio
+        </button>
+      </div>
     </section>
     <section></section>
   </body>
