--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <a href=""><li>Inicio</li></a>
         <a href="#presentacion"><li>Quien soy</li></a>
         <a href=""><li>Especialidad</li></a>
-        <a href=""><li>Contacto</li></a>
+       
         <a href=""><li>Portafolio</li></a>
+        <a href="#contacto"><li>Contacto</li></a>
       </ul>
     </nav>
     <div id="menu-toggle" onclick="boton()">
@@ -104,7 +105,11 @@
 
     <section id="contacto">
       <div class="contenido">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eius, quos aperiam animi voluptatum obcaecati sed porro</p>
+        <p>Correo: dev.vicentefigueroa@gmail.com <br>
+        Numero de contacto: +56974104013 <br>
+        Redes sociales: <br>
+        <i class="fab fa-linkedin"></i>
+        </p>
 
         <div class="botonera">
           <button>
@@ -120,6 +125,19 @@
         <button class="portafolio">
           portafolio
         </button>
+      </div>
+
+      <div class="formulario">
+        <h3>Enviame un mensaje</h3>
+        <form action="">
+          <label for="">Correo</label><br>
+          <input class="email" type="email">
+          <br>
+          <label for="">mensaje</label><br>
+          <textarea class="textarea"></textarea>
+          <br>
+          <input class="submit" type="submit">
+        </form>
       </div>
     </section>
     <section></section>
