--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <!--Menu de navegacion-->
-    <nav id="menu">
+    <nav id="menu" style="display: none;">
       <ul>
         <a href=""><li>Inicio</li></a>
         <a href="#presentacion"><li>Quien soy</li></a>
