--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Sobre mí</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience"
@@ -67,19 +67,21 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education"
-              >Education</a
+              >Educación</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests"
-              >Interests</a
+              >Intereses</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#awards"
+              >certificados</a
+            >
           </li>
         </ul>
       </div>
@@ -94,30 +96,35 @@
             <span class="text-secondary">Figueroa</span>
           </h1>
           <div class="subheading mb-5">
-            3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+            Estudiante · Ingenieria en Información y Control de gestión · (+56)
+            9 74104013 ·
             <a href="mailto:name@email.com">dev.vicentefigueroa@email.com</a>
           </div>
           <p class="lead mb-5">
-            I am experienced in leveraging agile frameworks to provide a robust
-            synopsis for high level overviews. Iterative approaches to corporate
-            strategy foster collaborative thinking to further the overall value
-            proposition.
+            Soy un apasionado estudiante en la programación y los sistemas de
+            información. He desarrollado aplicaciones para distintas
+            organizaciones sin fines de lucro y me gusta aprender
+            constantemente. Acepto grandes desafios y siempre miro con
+            positivismo hacia el futuro.
           </p>
+          <span> <p>¡ Sigueme en mis redes sociales !</p></span>
           <div class="social-icons">
             <a class="social-icon" href="#!"
               ><i class="fab fa-linkedin-in"></i
             ></a>
             <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-            <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+            <a class="social-icon" href="#!"
+              ><i class="fab fa-instagram"></i
+            ></a>
             <a class="social-icon" href="#!"
               ><i class="fab fa-facebook-f"></i
             ></a>
           </div>
         </div>
       </section>
-      <hr class="m-0" />
-      <!-- Experience-->
-      <section class="resume-section" id="experience">
+      <!-- <hr class="m-0" />
+      Experience-->
+      <!--<section class="resume-section" id="experience">
         <div class="resume-section-content">
           <h2 class="mb-5">Experience</h2>
           <div
@@ -191,33 +198,32 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
       <hr class="m-0" />
       <!-- Education-->
       <section class="resume-section" id="education">
         <div class="resume-section-content">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">Educación</h2>
           <div
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">
+                Ingenieria en Información y Control de gestión
+              </h3>
+              <div class="subheading mb-3">
+                Universidad Catolica del Norte - sede Coquimbo
+              </div>
+              <div>
+                "El Ingeniero en Información y Control de Gestión contribuye a
+                la gestión organizacional en cuanto controlar el uso óptimo de
+                los recursos de la organización y a satisfacer los
+                requerimientos de información al interior de la organización".
+              </div>
+              <p>-Escuela de ciencias empresariales</p>
             </div>
             <div class="flex-shrink-0">
-              <span class="text-primary">August 2006 - May 2010</span>
-            </div>
-          </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">Marzo 2015 - Actual</span>
             </div>
           </div>
         </div>
@@ -226,39 +232,45 @@
       <!-- Skills-->
       <section class="resume-section" id="skills">
         <div class="resume-section-content">
-          <h2 class="mb-5">Skills</h2>
-          <div class="subheading mb-3">Programming Languages & Tools</div>
+          <h2 class="mb-5">Habilidades</h2>
+          <div class="subheading mb-3">Lenguajes de programación</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item"><i class="fab fa-html5"></i></li>
             <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
             <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-            <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-            <li class="list-inline-item"><i class="fab fa-react"></i></li>
-            <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+            <li class="list-inline-item"><i class="fab fa-python"></i></li>
+            <li class="list-inline-item"><i class="fab fa-php"></i></li>
             <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-            <li class="list-inline-item"><i class="fab fa-less"></i></li>
-            <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-            <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-            <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-            <li class="list-inline-item"><i class="fab fa-npm"></i></li>
           </ul>
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Conocimientos técnicos</div>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Mobile-First, Responsive Design
+              Bases de datos estructuradas
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Cross Browser Testing & Debugging
+              Analisis de datos con Python y Pandas
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Cross Functional Teams
+              Uso de plantillas tipo Dashboards
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Agile Development & Scrum
+              Conocimiento de Django
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              Ofimatica
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              Metodologias agiles Scrum y KanBan
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              Análisis de sistemas de información
             </li>
           </ul>
         </div>
@@ -267,12 +279,11 @@
       <!-- Interests-->
       <section class="resume-section" id="interests">
         <div class="resume-section-content">
-          <h2 class="mb-5">Interests</h2>
+          <h2 class="mb-5">Intereses laborales</h2>
           <p>
-            Apart from being a web developer, I enjoy most of my time being
-            outdoors. In the winter, I am an avid skier and novice ice climber.
-            During the warmer months here in Colorado, I enjoy mountain biking,
-            free climbing, and kayaking.
+            Estoy comprometido con llevar a cabo un buen desarrollo de sistemas
+            organizacional dentro de la empresariales con el motivo de cumplir
+            una gestión innovadora e impulsar la organización a nuevos niveles.
           </p>
           <p class="mb-0">
             When forced indoors, I follow a number of sci-fi and fantasy genre
