--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Sobre mí</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience"
               >Experience</a
             >
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education"
               >Educación</a
@@ -119,10 +119,8 @@
               ><i class="fab fa-linkedin-in"></i
             ></a>
             <a class="social-icon" href="https://github.com/Vicente-Figueroa" target="_blank"><i class="fab fa-github"></i></a>
-            <a class="social-icon" href="https://www.instagram.com/dead._bug/" target="_blank"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a class="social-icon" href="https://www.facebook.com/vicentealonso.figueroaalfaro/" target="_blank" 
+           
+            <a class="social-icon" href="https://www.facebook.com/dev.vicentefigueroa" target="_blank" 
               ><i class="fab fa-facebook-f"></i
             ></a>
           </div>
