--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </nav>
     <!-- Page Content-->
-    <div class="container-fluid p-0 text-xl-left">
+    <div class="container-fluid p-0 text-center text-xl-left">
       <!-- About-->
       <section class="resume-section" id="about">
         <div class="resume-section-content">
@@ -109,12 +109,12 @@
           </div>
 
           <div class="subheading mb-5">
-            Ingeniería en Información y Control de gestión · Desarrollador de
+            Ingeniero en Información y Control de gestión · Desarrollador de
             software · (+56) 9 74104013 ·
             <a href="mailto:name@email.com">dev.vicentefigueroa@email.com</a>
           </div>
           <p>
-            Soy un egresado en ingenieria en información y control de gestión y
+            Soy un egresado en ingeniería en información y control de gestión y
             amante de la programación y el analisis de datos que puede ayudar a
             las empresas a alcanzar su potencial de organización a travez de la
             implementacion de tecnologias de información y el extenso y
@@ -249,6 +249,7 @@
                 los recursos de la empresa y a satisfacer los requerimientos de
                 información al interior de la organización".
               </div>
+              <br />
               <p>-Escuela de ciencias empresariales</p>
               <br />
               <p>
@@ -340,7 +341,7 @@
               <span class="fa-li"
                 ><i class="fas fa-desktop text-dark"></i
               ></span>
-              Supervised learning with Scikit Learning (5 hrs) - DataCamp - 2021
+              Supervised learning with Scikit Learning - DataCamp - 2021
             </li>
             <li>
               <span class="fa-li"
